# cs-and-more-cs

./: .gitignore  CMakeLists.txt  Explained.md  README.md  Testing.h  main.cpp  overloadingThings.cpp  unit_test.cpp
Algorithms/: Algos.md  BubbleSort.cpp  CMakeLists.txt  quicksort.cpp
Algorithms/Algo_build/: BubbleSort  CMakeCache.txt  Makefile  cmake_install.cmake
Algorithms/Dijkstras/: Dijkstras.md
Algorithms/Dynamic/: fib.cpp
Algorithms/Kruskals/: Kruskals.md  kruskal.py
Algorithms/MST/: problem.txt
Algorithms/MergeSort/: main.cpp
Algorithms/Prims/: prims.md
Algorithms/ShortestPath/: DjikstraAlg.md  problem.txt  sssp.py  v3.cpp
Algorithms/SortCandies/: main.py  scratch.py  sortCandies.md
Algorithms/chess/: main.cpp
DataStructures/: main.cpp
DataStructures/ChessTree/: CTree.h
DataStructures/Linked_List/: CMakeLists.txt
DataStructures/Node/: Node.cpp  Node.h
DataStructures/Trees/: BinaryTree.cpp  (+1 more)
Documents/: DynamicProg.md
KnapSack/: main.cpp  report.txt
Linked_List/: LinkedList.cpp  LinkedList.h
Linked_Lists/: LinkedList.cpp  LinkedList.h
LongDecSubSeq/: a  description.md  main.cpp  scratch.cpp
MST/: prims.cpp
MergeTheCandies/: problem.txt
Node/: CMakeLists.txt  Node.cpp  Node.h  Testing.cpp
Random/: const.cpp  defineDir.cpp
SSSP/: Report.md  v0.cpp
ShortestPath/: DjikstraAlg.md  sssp.py  v0.cpp  v1.cpp
Stack/: main.py  stack.py
Testing/: NodeTests.h  Testing.h  unit_test.cpp
Vector/: vec.cpp
WeightedEditDist/: Problem.md  main.cpp  main.py  report.md  submission.cpp  submissionB.cpp
code/: main.cpp
(+53 files in other folders)
